# pixel-art-scaler

./: CLAUDE.md  README.md  app.py  cli.py  gui.py  justfile  pyproject.toml  run-cli.sh  run.sh
.claude/: settings.local.json
